--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "nodemon server/index.mjs"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "express": "^4.21.0",
-    "dayjs": "^1.11.13"
+    "project": "file:"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
