--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "bulma": "^1.0.2",
+    "project": "file:",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
