--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server/index.js --watch server"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.2",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
