--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supabase": "^2.0.0"
   }
 }
