--- a/Client/tsconfig.app.json
+++ b/Client/tsconfig.app.json
@@ -1,23 +1,14 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": [
-    "env.d.ts",
-    "src/**/*",
-    "src/**/*.vue",
-    "src/supabase",
-    "src/services"
-  ],
-  "exclude": ["src/**/__tests__/*", "node_modules"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@services/*": ["src/client/services/*"]
-    },
-    "allowJs": true,
-    "checkJs": false
+      "@/*": ["./src/*"]
+    }
   }
 }
