--- a/Client/tsconfig.node.json
+++ b/Client/tsconfig.node.json
@@ -9,6 +9,7 @@
   ],
   "compilerOptions": {
     "composite": true,
+    "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
     "module": "ESNext",
