--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "bulma": "^1.0.2",
+    "concurrently": "^9.1.0",
     "project": "file:",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
