--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@oruga-ui/oruga-next": "^0.9.3",
     "bulma": "^1.0.2",
     "concurrently": "^9.1.0",
     "project": "file:",
