--- a/Client/tsconfig.app.json
+++ b/Client/tsconfig.app.json
@@ -4,6 +4,7 @@
   "exclude": ["src/**/__tests__/*", "node_modules", "dist", "public"],
   "compilerOptions": {
     "composite": true,
+    "module": "ESNext",
     "moduleResolution": "Bundler",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
